--- a/jh-twitter-stats-api/appsettings.json
+++ b/jh-twitter-stats-api/appsettings.json
@@ -2,7 +2,7 @@
   "TwitterAPI": {
     "BaseUrl": "https://api.twitter.com/2/",
     "SampleStreamEndpoint": "tweets/sample/stream",
-    "BearerToken": "AAAAAAAAAAAAAAAAAAAAAGi7bgEAAAAAq6KFfnDqi55c1V44TWHKywQdAA8%3DO7NWve3QP2VrGlPP7XO14au5jXdamQGrGjRfxvkWpTRwaPieDd"
+    "BearerToken": ""
   },
   "General": {
     "StatsCalculatorSleepNoWorkInMilliseconds": 1000,
