More comments Final updates - ready for sharing w/ JH

--- a/jh-twitter-stats-api/appsettings.json
+++ b/jh-twitter-stats-api/appsettings.json
@@ -6,7 +6,9 @@
   },
   "General": {
     "StatsCalculatorSleepNoWorkInMilliseconds": 1000,
-    "StatsCalculatorSleepHasWorkInMilliseconds": 10
+    "StatsCalculatorSleepHasWorkInMilliseconds": 10,
+    "MaxStatsReturnSize": 10,
+    "MaxHashTagsReturnSize": 10
   },
   "Logging": {
     "LogLevel": {
